--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        java: [21]
+        java: [11]
         jdk-distribution: [adopt]
-    name: Test on java ${{ matrix.java }}-${{ matrix.jdk-distribution }}
+        sbt-version: [1.0.0, 1.2.0, 1.5.0, 1.7.0, 1.9.0, 1.10.0, 1.10.10]
+    name: Test on java ${{ matrix.java }}-${{ matrix.jdk-distribution }} SBT ${{ matrix.sbt-version }}
     steps:
       - uses: actions/checkout@v4
 
@@ -25,6 +26,8 @@ jobs:
 
       - name: Set up SBT
         uses: sbt/setup-sbt@v1
+        with:
+          sbt-runner-version: ${{ matrix.sbt-version }}
 
       - name: Cache SBT
         uses: actions/cache@v4
