--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         java: [11]
         jdk-distribution: [adopt]
-        sbt-version: [1.0.0, 1.2.0, 1.5.0, 1.7.0, 1.9.0, 1.10.0, 1.10.10]
+        sbt-version: [1.2.0, 1.5.0, 1.7.0, 1.9.0, 1.10.0, 1.10.10]
     name: Test on java ${{ matrix.java }}-${{ matrix.jdk-distribution }} SBT ${{ matrix.sbt-version }}
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
       - name: Checkout current
         run: git checkout . && git clean -df
       - name: Run tests
-        run: sbt 'eval java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments();scripted'
+        run: sbt scripted
       - name: Clean caches
         run: |
           rm -fv ~/.ivy2/.sbt.ivy.lock
